--- a/aboutme.html
+++ b/aboutme.html
@@ -19,6 +19,13 @@ background:#0d2a59;
 color:white;
 font-family:Courier New;
 }
+img { 
+  border: 1px solid white; 
+} 
+img:hover { 
+  outline: 2px solid white; 
+} 
+
 
 
 </style> 
@@ -27,7 +34,7 @@ font-family:Courier New;
   <font size="5"><h1> <span style="background:yellow ; color:black"> All About Me </span> </h1> </font>
     
 
- <a href="http://www.bakersfield.com/" target="_blank"> <div style="text-align: center;"><img src="bakersfield.jpg" height=328 width=627 /><div/> </a>
+ <div> <a href="http://www.bakersfield.com/" target="_blank"> <div style="text-align: center;"><img src="bakersfield.jpg" height=328 width=627 /><div/> </a> </div>
 
 <P>I was born in Bakersfield, CA in August 29, 2003. 
 Bakersfield is a city on the Kern River, north of Los Angeles. </P>
