--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@ function doSomething() {
 
 
     <a href="https://androidify.com/en/#/" target="_blank"> <div style="text-align: center;"> <img src="mariano.gif" width=350 border="4"/> <div/> </a>
+    
+    <button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+
+<p id="demo"></p>
+
   
    
   </body>
