--- a/schedule.html
+++ b/schedule.html
@@ -20,7 +20,17 @@ body
     color:white;
     font-family:Courier New;
 }
-
+  table
+           {
+           	border:white;
+           	border-collapse: collapse;
+           }
+          td:hover
+          {
+            background-color:yellow;
+              color:black;
+              
+          }
 
 </style> 
 </head>
